# container-knacker

./: README.md  app.py  optimized_output.json  output_detailed_stack_placement.json  output_stack.json  pyproject.toml
Documents/: Links.md  relevante_daten.xlsx
Documents/Hackathon_2025/: ~$Pitch.pptx
Frontend Eingabe/: README.md  package-lock.json  package.json
Frontend_Eingabe/: README.md  package-lock.json  package.json
Vorlagen/: beispiel.json  order.json  order.schema.json  readme.md
algo/: algorithm.py  pyproject.toml  testing.ipynb
backend/: 2d_shape_optimization.py  __init__.py  main.py  make_3d_to_2d_problem.py  pyproject.toml
backend/3D22D/: make_3d_to_2d_problem.py
backend/Algorithm/: Algorithm2d - Kopie.py  meine_Bestellung.json  order_parser.py
backend/PackageProblem2D/: 2d_rect_genetic_alg.py  __init__.py
backend/convert_problem/: __init__.py
backend/json/: meine_Bestellung.json
backend/json_parser/: __init__.py  json_parser.py
backend/src/: Algorithm2d - Kopie.py  beispiel.json  json_parser.py  main.py  make_3d_to_2d_problem.py  meine_Bestellung.json  order_parser.py  placed.json  three_dimensional.py  two_dim_rect_and_circle_genetic_alg.py  two_dimensional.py
backend/src/container_knacker_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/transport_objects/: __init__.py
backend_connector/: app.py  ladebalken.html  pdf_generator.py  pdf_generator_test.html  requirements.txt
frontend/: package-lock.json  package.json
frontend_3D/: package-lock.json  package.json  tsconfig.json
(+19 files in other folders)
