[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "container-knacker-backend"
version = "0.1.0"
description = "Backend package for container-knacker project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geneticalgorithm>=1.0.2",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "numpy>=2.3.4",
]

[tool.setuptools]
packages = {find = {where = ["."]}}

[tool.setuptools.package-data]
"" = ["*.py"]
